<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:hint="@string/nomeBenzinaio"
        android:inputType="text"
        android:id="@+id/addRifornimentoNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/importo"
        android:inputType="text"
        android:id="@+id/addRifornimentoImporto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/addRifornimentoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addRifornimentoButton"/>

</LinearLayout>